--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "vie-react",
   "private": true,
+  "homepage": "https://publicaciones.com.co/",
   "scripts": {
+    "predeploy": "npm run build  && echo 'mauriciosalazar.com.co' > ./build/CNAME",
+    "deploy": "gh-pages -d build ",  
     "dev": "next dev",
     "build": "next build",
     "export": "next build && next export",
@@ -9,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
