--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://publicaciones.com.co/",
   "scripts": {
     "predeploy": "npm run build  && echo 'publicacionessalazar.com.co' > ./build/CNAME",
-    "deploy": "gh-pages -d build ",  
+    "deploy": "gh-pages -d build ",
     "dev": "next dev",
     "build": "next build",
     "export": "next build && next export",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
+    "heroku": "^7.59.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
